--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -8,7 +8,7 @@ block main
 
     form.row.row-cols-sm-auto.g-3.align-items-center.m-4
         .col-md-6
-            label.visually-hidden(for='email') Email
+            label(for='email') Email
                 input#email.form-control(type='text', placeholder='Email')
         .col-md-6
             button.btn.btn-outline-secondary(type='submit') Check In
