--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -6,9 +6,13 @@ block main
     .display-5.m-2 Check In
     p.m-2 Insert email of attendee to check them in
 
-    form.row.row-cols-sm-auto.g-3.align-items-center.m-4
-        .col-md-6
-            label(for='email') Email
-                input#email.form-control(type='text', placeholder='Email')
-        .col-md-6
-            button.btn.btn-outline-secondary(type='submit') Check In
+    .container-md.text-center.p-2.my-3.border
+        form.d-flex
+            input.form-control.me-2(type='text', placeholder='Email', aria-label='Email')
+            button.btn.btn-outline-secondary.mx-1(type='submit') Check In
+        //
+        //.col-md-6
+        //    label(for='email') Email
+        //        input#email.form-control(type='text', placeholder='Email')
+        //.col-md-6
+        //    button.btn.btn-outline-secondary(type='submit') Check In
