--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -9,10 +9,5 @@ block main
     .container-md.text-center.p-2.my-3.border
         form.d-flex
             input.form-control.me-2(type='text', placeholder='Email', aria-label='Email')
-            button.btn.btn-outline-secondary.mx-1(type='submit') Check In
-        //
-        //.col-md-6
-        //    label(for='email') Email
-        //        input#email.form-control(type='text', placeholder='Email')
-        //.col-md-6
-        //    button.btn.btn-outline-secondary(type='submit') Check In
+            button.btn.btn-outline-secondary.mx-1.text-nowrap(type='submit') Check In
+
