--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -16,9 +16,9 @@ block main
                             span.badge.text-bg-secondary.m-1 0
                 +badges('Check-In Attendees')
                 +badges("RSVP'd Users")
-    
+
     .container-md.text-center.p-2.my-3.border
         form.d-flex
-            input.form-control.me-2(type='text', placeholder='Email', aria-label='Email')
+            input.form-control.me-2.p-3(type='text', placeholder='Email', aria-label='Email')
             button.btn.btn-outline-secondary.mx-1.text-nowrap(type='submit') Check In
 
