--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -6,9 +6,9 @@ block main
     .display-5.m-2 Check In
     p.m-2 Insert email of attendee to check them in
 
-    .outside.bd-example.bd-example-cols.m-3
+    .outside.bd-example-cols.m-3
         .container.text-center
-            .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4
+            .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4.justify-content-center
 
                 mixin badges(title)
                     .col.text-decoration-none
