--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -6,7 +6,7 @@ block main
     .display-5.m-2 Home
     if(userRoles.includes('Organizer'))
         //.display-5.m-2 Home
-        .outside.bd-example.bd-example-cols.m-3
+        .bd-example-cols.m-3
             .container.text-center
                 .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4
 
