--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -46,7 +46,7 @@ block main
                     //.col.text-decoration-none
                     //    .p-3 Listed Projects
                     //        span.badge.text-bg-secondary.m-1 0
-        .row.row-cols-1.row-cols-md-3.g-4.text-center.m-3
+        .row.row-cols-1.row-cols-md-3.g-4.text-center.m-3.justify-content-center
             .col
                 .card
                     .card-body
@@ -81,7 +81,7 @@ block main
             //            a.btn.btn-primary(href='#') Go somewhere
     else if (userRoles.includes('Attendee'))
         //.display-5.m-2 Home
-        .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
+        .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center.justify-content-center
             // -- If no application
             .col
                 .card.m-1
