--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -4,7 +4,8 @@ extends includes/dashboard_bar
 block main
 
     .display-5.m-2 Check In
-    p.m-2 Insert email of attendee to check them in
+    hr
+    //p.m-2 Insert email of attendee to check them in
 
     .outside.bd-example-cols.m-3
         .container.text-center
