--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -15,7 +15,7 @@ block main
                             .p-3= title
                                 span.badge.text-bg-secondary.m-1 0
                     +badges('Total Applicants')
-                    +badges('RSVPd')
+                    +badges("RSVP'd")
                     +badges('Hardware Checkouts')
                     +badges('Mentorship Requests')
                     +badges('Listed Events')
