--- a/src/views/includes/dashboard_bar.pug
+++ b/src/views/includes/dashboard_bar.pug
@@ -46,7 +46,7 @@ block nav
             li.nav-item
                 a.nav-link(aria-current='page', href='/dashboard') Dashboard Home
             li.nav-item
-                a.nav-link(href='/dashboard/apply') Apply
+                a.nav-link(href='/dashboard/apply') My Application
             li.nav-item
                 a.nav-link(href='/') Back to Main Site
             if(isAuthenticated)
