--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -7,7 +7,7 @@ block main
 
     //p.m-2 Insert email of attendee to check them in
 
-    .outside.bd-example-cols.m-3
+    .bd-example-cols.m-3
         .container.text-center
             .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4.justify-content-center
 
