--- a/src/views/hardware_item.pug
+++ b/src/views/hardware_item.pug
@@ -15,6 +15,9 @@ block main
                         p count
                         p link
                         p category
+                    button.btn.btn-outline-info Edit
+                    button.btn.btn-outline-danger Delete
+
         .col-md-6
             .card
                 .card-body
@@ -24,7 +27,7 @@ block main
                         .text-center.p-2.my-3.border
                             form.d-flex
                                 input.form-control.me-2.p-3(type='text', placeholder='Email', aria-label='Email')
-                                button.btn.btn-outline-secondary.mx-1.text-nowrap(type='submit') Check In
+                                button.btn.btn-outline-secondary.mx-1.text-nowrap(type='submit') Check Out Item to Email
 
         .col-md-12
             .card
