--- a/src/views/hardware_item.pug
+++ b/src/views/hardware_item.pug
@@ -4,19 +4,19 @@ block main
 
     .display-5.m-2 Hardware Item X
 
-    .row.row-cols-1.row-cols-md-2.g-4.text-center.m-3.justify-content-center
+    .row.row-cols-1.row-cols-md-2.g-4.m-3.justify-content-center
         .col-md-6
             .card
                 .card-body
-                    h5.card-title Hardware Info
+                    h5.card-title.text-center Hardware Info
                     hr
                     p.card-text
                         p name
                         p count
                         p link
                         p category
-                    button.btn.btn-outline-info Edit
-                    button.btn.btn-outline-danger Delete
+                    button.btn.btn-outline-info.mx-1 Edit
+                    button.btn.btn-outline-danger.mx-1 Delete
 
         .col-md-6
             .card
