--- a/src/views/hardware_item.pug
+++ b/src/views/hardware_item.pug
@@ -21,7 +21,7 @@ block main
         .col-md-6
             .card
                 .card-body
-                    h5.card-title Checkout this Item
+                    h5.card-title.text-center Checkout this Item
                     hr
                     p.card-text
                         .text-center.p-2.my-3.border
@@ -31,7 +31,7 @@ block main
 
         .col-md-12
             .card
-                .card-body
+                .card-body.text-center
                     h5.card-title Checked Out By:
                     hr
                     p.card-text
