--- a/src/views/hardware_item.pug
+++ b/src/views/hardware_item.pug
@@ -31,7 +31,7 @@ block main
 
         .col-md-12
             .card
-                .card-body.text-center
+                .card-body
                     h5.card-title Checked Out By:
                     hr
                     p.card-text
