--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -44,6 +44,7 @@ block main
                         //th created_at
                         //th updated_at
                         th Status
+                        th Email
                         th Age
                         th Country
                         th School
@@ -65,7 +66,7 @@ block main
                         tr
                             td
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
-                            //td= event_application[1]
+                            td= event_application[1]
                             //td= event_application[2]
                             td= event_application[3]
                             td= event_application[4]
