--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -67,8 +67,8 @@ block main
                             td
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
                             td= event_application[1]
-                            td= event_application[2]
-                            td= event_application[3]
+                            //td= event_application[2]
+                            //td= event_application[3]
                             td= event_application[4]
                             td= event_application[5]
                             td= event_application[6]
