--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -32,19 +32,19 @@ block main
         .container-md.text-center.p-2.my-3.border
 
             form.d-flex(role='search')
-                input.form-control.me-2(type='search', placeholder='Search', aria-label='Search')
+                input.form-control.me-2#myInput(type='search', placeholder='Search', aria-label='Search', onkeyup='searchTable()')
                 button.btn.btn-outline-success.mx-1(type='submit') Search
                 button.btn.btn-outline-success.mx-1(type='submit') Download CSV
 
         .container-sm.overflow-x-scroll.mt-3.p-3
-            table.table.table-striped.table-bordered.my-4
+            table.table.table-striped.table-bordered.my-4#myTable
                 thead
                     tr
                         th user_id
                         //th created_at
                         //th updated_at
-                        th Status
                         th Email
+                        th Status
                         th Age
                         th Country
                         th School
