--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -84,3 +84,4 @@ block main
                             td= event_application[16]
                             td= event_application[17]
                             td= event_application[18]
+                            td= event_application[19]
