--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -69,7 +69,7 @@ block main
             button.btn.btn-outline-success.mx-1(type='submit') Download CSV
 
     .container-sm.overflow-x-scroll.mt-3.p-3
-        table.table.table-striped.table-bordered.my-4
+        table.table.table-striped.table-bordered.my-4#myTable
             thead
                 tr
                     th(scope='col') Name
