Placeholder labels for search functionality

--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -32,8 +32,8 @@ block main
         .container-md.text-center.p-2.my-3.border
 
             form.d-flex(role='search')
-                input.form-control.me-2#myInput(type='search', placeholder='Search', aria-label='Search', onkeyup='searchTable()')
-                button.btn.btn-outline-success.mx-1(type='submit') Search
+                input.form-control.me-2#myInput(type='search', placeholder='Search Event Applications', aria-label='Search Event Applications', onkeyup='searchTable()')
+                //button.btn.btn-outline-success.mx-1(type='submit') Search
                 button.btn.btn-outline-success.mx-1(type='submit') Download CSV
 
         .container-sm.overflow-x-scroll.mt-3.p-3
