--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -64,8 +64,8 @@ block main
 
     .container-md.text-center.p-2.my-3.border
         form.d-flex(role='search')
-            input.form-control.me-2#myInput(type='search', placeholder='Search', aria-label='Search', onkeyup='searchHardware()')
-            button.btn.btn-outline-success.mx-1(type='submit') Search
+            input.form-control.me-2#myInput(type='search', placeholder='Search Hardware', aria-label='Search Hardware', onkeyup='searchHardware()')
+            //button.btn.btn-outline-success.mx-1(type='submit') Search
             button.btn.btn-outline-success.mx-1(type='submit') Download CSV
 
     .container-sm.overflow-x-scroll.mt-3.p-3
