--- a/src/views/hardware_item.pug
+++ b/src/views/hardware_item.pug
@@ -35,4 +35,4 @@ block main
                     h5.card-title Checked Out By:
                     hr
                     p.card-text
-                        p This item hasnt been checked out yet
+                        p This item hasn't been checked out yet
