Addition of new email column

--- a/src/public/stylesheets/dashboard.css
+++ b/src/public/stylesheets/dashboard.css
@@ -126,6 +126,6 @@ a#mlh-trust-badge{
 hr {
     border-width: 0 0 1px;
     color: #ffffff;
-    border-image: linear-gradient(90deg, rgba(135, 206, 235, 0), #86a3e3 50%, rgba(135, 206, 235, 0) 100%) 0 0 100%;
+    border-image: linear-gradient(90deg, rgba(135, 206, 235, 0), #000000 50%, rgba(135, 206, 235, 0) 100%) 0 0 100%;
     border-style: solid;
 }
