--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -91,10 +91,10 @@ block main
                         hr
                         p.card-text
                             p Yay!! Looks like we got your application
-                            p If there is anything you would like to change in your application,
-                                | head to the My Application tab and change what you want!
-                            p We will send a notification whenever there have been updates
-                                | to your application! :)
+                            p.
+                                If there is anything you would like to change in your application, head to the My Application tab and change what you want!
+                            p.
+                                We will send a notification whenever there have been updates to your application! :)
 
         // -- No account
     else
